# travel-sceneflow

./: .gitignore  AGENTS.md  PLANS.md  README.md  pyproject.toml
data/sample/: README.md
docs/: ai-coding.md  plans.md  workflow.md
scripts/: run_checks.py  run_pipeline.py  run_step.py
src/sceneflow/: cli.py  workflow_utils.py
src/sceneflow/pipeline/: candidates.py  gemini_plan.py  gemini_render.py  llm_plan.py  meanings.py  render.py  representatives.py  scan.py  sceneify.py  structure.py  tagging.py
tests/: conftest.py  helpers.py  test_gemini_render.py  test_pipeline_contracts.py  test_run_step_flow.py
tests/fixtures/: media_info.csv
