[project]
name = "travel-sceneflow"
version = "0.1.0"
description = "Travel photos and videos organized into scenes for smooth, watchable video editing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
    "opencv-python>=4.13.0.92",
    "torch>=2.4,<2.7",
    "transformers>=4.46,<5",
    "pillow>=10,<12",
    "google-genai>=1.27,<2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
